add endpoint role verification onto cafcassController