@@ -5,6 +5,7 @@ import com.fasterxml.jackson.module.paramnames.ParameterNamesModule;
 import feign.FeignException;
 import feign.Request;
 import feign.Response;
+import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
@@ -12,6 +13,7 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import uk.gov.hmcts.reform.idam.client.models.UserInfo;
 import uk.gov.hmcts.reform.prl.exception.cafcass.exceptionhandlers.ApiError;
 import uk.gov.hmcts.reform.prl.mapper.CcdObjectMapper;
 import uk.gov.hmcts.reform.prl.models.dto.cafcass.CafCassResponse;
@@ -47,12 +49,17 @@ public class CafCassControllerTest {
     @Mock
     private CaseDataService caseDataService;
 
+    @Mock
+    private UserInfo userInfo;
+
     private static final String RESPONSE_JSON =
         "classpath:response/CafCaasResponse.json";
 
-    private String startDate = "2022-08-22T10:54:43.49";
+    private static final String CAFCASS_USER_ROLE = "caseworker-privatelaw-cafcass";
 
-    private String endDate = "2022-08-22T11:00:43.49";
+    private final String startDate = "2022-08-22T10:54:43.49";
+
+    private final String endDate = "2022-08-22T11:00:43.49";
 
     @Test
     public void getCaseDataTest() throws IOException {
@@ -65,9 +72,11 @@ public class CafCassControllerTest {
 
         when(authorisationService.authoriseService(any())).thenReturn(true);
         when(authorisationService.authoriseUser(any())).thenReturn(true);
+        when(authorisationService.getUserInfo()).thenReturn(userInfo);
+        when(authorisationService.getUserInfo().getRoles()).thenReturn(List.of(CAFCASS_USER_ROLE));
         when(caseDataService.getCaseData("authorisation", startDate, endDate))
             .thenReturn(expectedCafCassResponse);
-        ResponseEntity responseEntity = cafCassController.searcCasesByDates(
+        ResponseEntity<Object> responseEntity = cafCassController.searchCasesByDates(
             "authorisation",
             "Bearer serviceAuthorisation",
             startDate,
@@ -79,15 +88,16 @@ public class CafCassControllerTest {
             objectMapper.writeValueAsString(expectedCafCassResponse),
             objectMapper.writeValueAsString(realCafCassResponse)
         );
+        Assert.assertNotNull(realCafCassResponse);
         assertEquals(4, realCafCassResponse.getTotal());
         assertEquals(4, realCafCassResponse.getCases().size());
     }
 
     @Test
-    public void testInvalidServicAuth_401UnAuthorized() {
+    public void testInvalidServiceAuth_401UnAuthorized() {
         when(authorisationService.authoriseService(any())).thenReturn(false);
         when(authorisationService.authoriseUser(any())).thenReturn(false);
-        final ResponseEntity response = cafCassController.searcCasesByDates(
+        final ResponseEntity<Object> response = cafCassController.searchCasesByDates(
             "authorisation",
             "inValidServiceAuthorisation",
             "startDate",
@@ -103,10 +113,12 @@ public class CafCassControllerTest {
     public void testFeignExceptionBadRequest() throws IOException {
         when(authorisationService.authoriseService(any())).thenReturn(true);
         when(authorisationService.authoriseUser(any())).thenReturn(true);
+        when(authorisationService.getUserInfo()).thenReturn(userInfo);
+        when(authorisationService.getUserInfo().getRoles()).thenReturn(List.of(CAFCASS_USER_ROLE));
         when(caseDataService.getCaseData(TEST_AUTHORIZATION, startDate,
                                          endDate
         )).thenThrow(feignException(HttpStatus.BAD_REQUEST.value(), "Not found"));
-        final ResponseEntity response = cafCassController.searcCasesByDates(
+        final ResponseEntity<Object> response = cafCassController.searchCasesByDates(
             TEST_AUTHORIZATION,
             TEST_SERVICE_AUTHORIZATION,
             startDate,
@@ -119,10 +131,12 @@ public class CafCassControllerTest {
     public void testFeignExceptionUnAuthorised() throws IOException {
         when(authorisationService.authoriseService(any())).thenReturn(true);
         when(authorisationService.authoriseUser(any())).thenReturn(true);
+        when(authorisationService.getUserInfo()).thenReturn(userInfo);
+        when(authorisationService.getUserInfo().getRoles()).thenReturn(List.of(CAFCASS_USER_ROLE));
         when(caseDataService.getCaseData(TEST_AUTHORIZATION, startDate,
                                          endDate
         )).thenThrow(feignException(UNAUTHORIZED.value(), "Unauthorised"));
-        final ResponseEntity response = cafCassController.searcCasesByDates(
+        final ResponseEntity<Object> response = cafCassController.searchCasesByDates(
             TEST_AUTHORIZATION,
             TEST_SERVICE_AUTHORIZATION,
             startDate,
@@ -135,10 +149,12 @@ public class CafCassControllerTest {
     public void testExceptionInternalServerError() throws IOException {
         when(authorisationService.authoriseService(any())).thenReturn(true);
         when(authorisationService.authoriseUser(any())).thenReturn(true);
+        when(authorisationService.getUserInfo()).thenReturn(userInfo);
+        when(authorisationService.getUserInfo().getRoles()).thenReturn(List.of(CAFCASS_USER_ROLE));
         when(caseDataService.getCaseData(TEST_AUTHORIZATION, "startDate",
                                          "endDate"
         )).thenThrow(new RuntimeException());
-        final ResponseEntity response = cafCassController.searcCasesByDates(
+        final ResponseEntity<Object> response = cafCassController.searchCasesByDates(
             TEST_AUTHORIZATION,
             TEST_SERVICE_AUTHORIZATION,
             "startDate",
@@ -151,7 +167,9 @@ public class CafCassControllerTest {
     public void testExceptionInternalServerErrorForDateTimeRange() {
         when(authorisationService.authoriseService(any())).thenReturn(true);
         when(authorisationService.authoriseUser(any())).thenReturn(true);
-        final ResponseEntity response = cafCassController.searcCasesByDates(
+        when(authorisationService.getUserInfo()).thenReturn(userInfo);
+        when(authorisationService.getUserInfo().getRoles()).thenReturn(List.of(CAFCASS_USER_ROLE));
+        final ResponseEntity<Object> response = cafCassController.searchCasesByDates(
             TEST_AUTHORIZATION,
             TEST_SERVICE_AUTHORIZATION,
             "2022-08-22T10:54:43.49",
@@ -160,6 +178,21 @@ public class CafCassControllerTest {
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         assertEquals("Difference between end date and start date should not be more than 15 minutes",
                      ((ApiError)response.getBody()).getMessage());
+    }
+
+    @Test
+    public void testExceptionUnAuthorisedForInvalidCaseRole() {
+        when(authorisationService.authoriseService(any())).thenReturn(true);
+        when(authorisationService.authoriseUser(any())).thenReturn(true);
+        when(authorisationService.getUserInfo()).thenReturn(userInfo);
+        when(authorisationService.getUserInfo().getRoles()).thenReturn(List.of("invalid-case-role"));
+        final ResponseEntity<Object> response = cafCassController.searchCasesByDates(
+            "authorisation",
+            "Bearer serviceAuthorisation",
+            startDate,
+            endDate
+        );
+        assertEquals(UNAUTHORIZED, response.getStatusCode());
     }
 
     public static FeignException feignException(int status, String message) {
@@ -208,22 +241,25 @@ public class CafCassControllerTest {
 
         when(authorisationService.authoriseService(any())).thenReturn(true);
         when(authorisationService.authoriseUser(any())).thenReturn(true);
+        when(authorisationService.getUserInfo()).thenReturn(userInfo);
+        when(authorisationService.getUserInfo().getRoles()).thenReturn(List.of(CAFCASS_USER_ROLE));
         when(caseDataService.getCaseData("authorisation", startDate, endDate))
             .thenReturn(cafCassResponse);
 
         // Act
-        ResponseEntity<?> responseEntity = cafCassController.searcCasesByDates(
+        ResponseEntity<?> responseEntity = cafCassController.searchCasesByDates(
             "authorisation", "Bearer serviceAuthorisation", startDate, endDate
         );
 
         // Assert: still 200 and body present
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
         CafCassResponse body = (CafCassResponse) responseEntity.getBody();
+        Assert.assertNotNull(body);
         assertEquals(1, body.getTotal());
         assertEquals(1, body.getCases().size());
 
         // And the problematic part didn’t crash the controller
-        var caseOrder = body.getCases().get(0).getCaseData().getOrderCollection().get(0).getValue();
+        var caseOrder = body.getCases().getFirst().getCaseData().getOrderCollection().get(0).getValue();
         assertNull(caseOrder.getHearingDetails());
         assertNull(caseOrder.getHearingId());
     }
@@ -282,22 +318,25 @@ public class CafCassControllerTest {
 
         when(authorisationService.authoriseService(any())).thenReturn(true);
         when(authorisationService.authoriseUser(any())).thenReturn(true);
+        when(authorisationService.getUserInfo()).thenReturn(userInfo);
+        when(authorisationService.getUserInfo().getRoles()).thenReturn(List.of(CAFCASS_USER_ROLE));
         when(caseDataService.getCaseData("authorisation", startDate, endDate))
             .thenReturn(cafCassResponse);
 
         // Act
-        ResponseEntity<?> responseEntity = cafCassController.searcCasesByDates(
+        ResponseEntity<?> responseEntity = cafCassController.searchCasesByDates(
             "authorisation", "Bearer serviceAuthorisation", startDate, endDate
         );
 
         // Assert
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
         CafCassResponse body = (CafCassResponse) responseEntity.getBody();
+        Assert.assertNotNull(body);
         assertEquals(1, body.getTotal());
         assertEquals(1, body.getCases().size());
 
         // Verify both hearings parsed correctly
-        var order = body.getCases().get(0).getCaseData().getOrderCollection().get(0).getValue();
+        var order = body.getCases().getFirst().getCaseData().getOrderCollection().getFirst().getValue();
         assertNotNull(order.getHearingDetails());
         assertEquals("TYPE_A", order.getHearingDetails().getHearingType()); // first one taken
         assertEquals("First Hearing", order.getHearingDetails().getHearingTypeValue());
